resumen.xlsx and correlations

--- a/data_analysis_corr.ipynb
+++ b/data_analysis_corr.ipynb
@@ -683,14 +683,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MEC\\AppData\\Local\\Temp\\ipykernel_5548\\3151383097.py:11: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
+      "C:\\Users\\MEC\\AppData\\Local\\Temp\\ipykernel_5548\\3915735876.py:11: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  upper = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(np.bool))\n"
      ]
@@ -708,7 +708,13 @@
     "\n",
     "    # Select upper triangle of correlation matrix\n",
     "    upper = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(np.bool))\n",
-    "    upper.to_excel(writer, sheet_name='upper_corr')\n"
+    "    corr_matrix.to_excel(writer, sheet_name='upper_corr')\n",
+    "\n",
+    "    upper_high_corr = upper[upper>=0.75]\n",
+    "    corr_ind_list = [(ind, upper_high_corr.index[upper_high_corr[ind]==el][0], el) for ind in upper_high_corr.columns for el in upper_high_corr[ind] if el>=0]\n",
+    "    corr_ind_df = pd.DataFrame(corr_ind_list, columns=['ind1', 'ind2', 'corr']).sort_values(by='ind1')\n",
+    "\n",
+    "    corr_ind_df.to_excel(writer, sheet_name='high_corr_list')"
    ]
   },
   {
